--- a/templates/index.html
+++ b/templates/index.html
@@ -1133,15 +1133,15 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form_container">
-            <form action="">
+            <form action="submit_form" method="post">
               <div>
-                <input type="text" class="form-control" placeholder="Your Name" />
+                <input name="name" type="text" class="form-control" placeholder="Your Name" />
               </div>
               <div>
-                <input type="text" class="form-control" placeholder="Phone Number" />
+                <input name="number" type="text" class="form-control" placeholder="Phone Number" />
               </div>
               <div>
-                <input type="email" class="form-control" placeholder="Your Email" />
+                <input name="email" type="email" class="form-control" placeholder="Your Email" />
               </div>
               <div>
                 <select class="form-control nice-select wide">
@@ -1163,7 +1163,7 @@
                 </select>
               </div>
               <div>
-                <input type="date" class="form-control">
+                <input name="date" type="date" class="form-control">
               </div>
               <div class="btn_box">
                 <button>
